--- a/.github/workflows/run_main.yml
+++ b/.github/workflows/run_main.yml
@@ -26,3 +26,13 @@ jobs:
     - name: Run main script
       run: |
         python __main__.py
+
+    - name: Commit and push changes
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add database.db
+        git commit -m 'Update database.db with new auctions'
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
