--- a/.github/workflows/run_main.yml
+++ b/.github/workflows/run_main.yml
@@ -28,11 +28,11 @@ jobs:
         python __main__.py
 
     - name: Commit and push changes
+      env:
+        PAT: ${{ secrets.PAT }}
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add database.db
         git commit -m 'Update database.db with new auctions'
-        git push
-      env:
-        TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        git push https://PAT:${{ secrets.PAT }}@github.com/UltimateBoi/AhAveragesPy.git HEAD:main
