--- a/.github/workflows/run_main.yml
+++ b/.github/workflows/run_main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests nbtlib nbt
+        pip install requests nbtlib nbt aiohttp
 
     - name: Run main script
       run: |
